--- a/assets/styles/_layout.scss
+++ b/assets/styles/_layout.scss
@@ -21,9 +21,18 @@ header {
   }
 }
 
+section {
+  width: 100%;
+
+  &.add {
+    width: 50%;
+    margin: 0 auto;
+  }
+}
+
 main {
-  width: calc(100% / 3);
-  max-width: 960px;
+  width: 80%;
+
   margin: 0 auto;
   flex-grow: 1;
 }
